delete some cards

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Profile</title>
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="./app.css" />
   </head>
 
   <body>
@@ -35,7 +35,7 @@
             >
           </div>
           <div class="right-landingpage">
-            <img src="assets/profile.jpg" alt="profile" />
+            <img src="./profile.jpg" alt="profile" />
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
           <div class="card">
             <ul>
               <li>
-                <label>Name</label>
+                <label>Full Name</label>
                 : Fanny Limin
               </li>
               <li>
@@ -82,7 +82,7 @@
         <div class="profile card">
           <header>
             <figure>
-              <img src="assets/profile.jpg" alt="profile" />
+              <img src="./profile.jpg" alt="profile" />
             </figure>
             <h2>Fanny Limin</h2>
             <p>Bangkit 2023</p>
